--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#contato" class="nav__link" data-lang-key="contact">Contato</a></li>
                 </ul>
                 <div class="nav__controls">
-                    <button class="control-btn" id="login-btn" data-lang-key="login">Login</button>
+                    <a href="login.html" class="control-btn" id="login-btn" data-lang-key="login">Login</a>
                     <div class="language-switcher">
                         <button class="control-btn" id="lang-pt">PT</button> | <button class="control-btn" id="lang-en">EN</button>
                     </div>
