--- a/host-panel.html
+++ b/host-panel.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Administração</title>
+    <title>Painel do Host</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 <body class="admin-page-body">
 
     <header class="admin-header">
-        <header class="admin-header">
-    <h1>Painel de Administração - play.u</h1>
+    <h1>Painel do Host - <span id="host-username"></span></h1>
     <div class="admin-header-actions"> <button id="show-profile-btn" class="admin-view-site-btn">Meu Perfil</button>
         <a href="index.html" class="admin-view-site-btn">Voltar ao Site</a>
+    </div>
 </header>
-    </header>
-
-    <main class="container">
+<main class="container">
     <div class="admin-panel">
         <div class="admin-panel-header">
             <h2>Meus Jogos</h2>
             <button id="add-new-game-btn" class="submit-btn">Adicionar Novo Jogo</button>
         </div>
+        <p class="form-hint">Jogos enviados por você ficam com status "Pendente" até serem aprovados por um administrador.</p>
         <div id="game-list-container">
             </div>
     </div>
+
     <div class="admin-panel profile-panel hidden">
         <div class="admin-panel-header">
             <h2>Meu Perfil</h2>
@@ -127,9 +127,7 @@
     <script src="assets/js/gamedata.js"></script>
     <script src="assets/js/userdata.js"></script>
     <script src="assets/js/data-manager.js"></script>
-    <script src="assets/js/admin.js"></script>
+    <script src="assets/js/host-panel.js"></script>
     <script src="assets/js/profile-editor.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
