--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <li><ion-icon name="mail-outline"></ion-icon> contato@playu.com</li>
                 </ul>
                 <div class="social-links">
-                    <a href="https://instagram.com/playu.gg" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="https://instagram.com/playu.gg" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-instagram"></ion-icon> Nos siga no Instagram!</a>
                 
                 </div>
             </div>
@@ -169,7 +169,9 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     
-    <script src="assets/js/gamedata.js"></script> 
+    <script src="assets/js/gamedata.js"></script>
+    <script src="assets/js/userdata.js"></script>
+    <script src="assets/js/data-manager.js"></script>
     <script src="assets/js/translations.js"></script>
     <script src="assets/js/main.js"></script>
 
