--- a/jogo-template.html
+++ b/jogo-template.html
@@ -12,17 +12,18 @@
     <header id="header" class="header">
     <nav class="nav container">
         <ul class="nav__links left">
-            <li><a href="index.html#home" class="nav__link" data-lang-key="home">Início</a></li>
-            <li><a href="index.html#jogos" class="nav__link" data-lang-key="games">Jogos</a></li>
-            <li><a href="index.html#sobre" class="nav__link" data-lang-key="about">Sobre</a></li>
-        </ul>
+            </ul>
         <a href="index.html#home" class="nav__logo"><img src="assets/images/logo.png" alt="play.u Logo"></a>
         <div class="nav__right-group">
             <ul class="nav__links right">
-                <li><a href="index.html#faq" class="nav__link" data-lang-key="faq">FAQ</a></li>
-                <li><a href="index.html#contato" class="nav__link" data-lang-key="contact">Contato</a></li>
-            </ul>
+                </ul>
             <div class="nav__controls">
+                <button class="control-btn header-shortcut-btn" id="header-join-player-btn">
+                    <ion-icon name="game-controller-outline"></ion-icon> <span>Entrar como Jogador</span>
+                </button>
+                <button class="control-btn header-shortcut-btn" id="header-join-host-btn">
+                    <ion-icon name="easel-outline"></ion-icon> <span>Entrar como Host</span>
+                </button>
                 <a href="login.html" class="control-btn" id="login-btn" data-lang-key="login">Login</a>
                 <div class="language-switcher">
                     <button class="control-btn" id="lang-pt">PT</button> | <button class="control-btn" id="lang-en">EN</button>
