--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     
-    <script src="assets/js/gamedata.js"></script>
-    <script src="assets/js/userdata.js"></script>
-    <script src="assets/js/data-manager.js"></script>
-    <script src="assets/js/translations.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/gamedata.js" defer></script>
+    <script src="assets/js/userdata.js" defer></script>
+    <script src="assets/js/data-manager.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/translations.js" defer></script>
 
 </body>
 </html>
