--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <script src="assets/js/data-manager.js" defer></script>
     <script src="assets/js/main.js" defer></script>
     <script src="assets/js/translations.js" defer></script>
-
+    <link rel="stylesheet" href="/css/style.css?v=1.0.1">
+    <script src="/js/main.js?v=1.0.1"></script>
 </body>
 </html>
