atualizações nas ferramentas do host e organização melhorada do css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="about-text">
                 <h2 data-lang-key="ourHistory">Nossa História</h2>
                 <p data-lang-key="historyTextLong">
-                    Aqui você pode inserir o seu texto longo. A play.u nasceu de um sonho compartilhado entre um grupo de amigos apaixonados por tecnologia e, claro, por jogos. Percebemos que havia uma lacuna no mercado para experiências de entretenimento ao vivo que fossem verdadeiramente imersivas e acessíveis. Não queríamos apenas criar mais uma plataforma de jogos; queríamos construir um universo onde cada partida fosse uma história única, cada jogador um protagonista.
+                    A play.u nasceu de um sonho compartilhado entre um grupo de amigos apaixonados por tecnologia e, claro, por jogos. Percebemos que havia uma lacuna no mercado para experiências de entretenimento ao vivo que fossem verdadeiramente imersivas e acessíveis. Não queríamos apenas criar mais uma plataforma de jogos; queríamos construir um universo onde cada partida fosse uma história única, cada jogador um protagonista.
                     <br><br>
                     Desde o primeiro dia, nosso foco tem sido a qualidade e a inovação. Investimos pesado em tecnologia de ponta para garantir transmissões fluidas, interfaces intuitivas e, o mais importante, jogos que desafiam e encantam. Cada linha de código, cada pixel de design e cada nova funcionalidade são pensados para enriquecer a jornada do jogador conosco. Acreditamos que o entretenimento é uma ponte que conecta pessoas, e é essa conexão que nos motiva a continuar evoluindo e trazendo o futuro dos jogos para o presente.
                 </p>
@@ -175,7 +175,6 @@
     <script src="assets/js/data-manager.js" defer></script>
     <script src="assets/js/main.js" defer></script>
     <script src="assets/js/translations.js" defer></script>
-    <link rel="stylesheet" href="/css/style.css?v=1.0.1">
-    <script src="/js/main.js?v=1.0.1"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 </body>
 </html>
