--- a/sala.html
+++ b/sala.html
@@ -61,4 +61,5 @@
     <script src="assets/js/userdata.js" defer></script>
     <script src="assets/js/data-manager.js" defer></script>
     <script src="assets/js/sala.js" defer></script> </body>
+    <link rel="stylesheet" href="assets/css/style.css">
 </html>
