--- a/host-panel.html
+++ b/host-panel.html
@@ -123,11 +123,16 @@
     </div>
 </dialog>
 </main>
-    <script src="assets/js/availability-editor.js"></script>
-    <script src="assets/js/gamedata.js"></script>
-    <script src="assets/js/userdata.js"></script>
-    <script src="assets/js/data-manager.js"></script>
-    <script src="assets/js/host-panel.js"></script>
-    <script src="assets/js/profile-editor.js"></script>
+    <script>
+    loadAsset('assets/css/style.css');
+    loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
+    loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
+    loadAsset('assets/js/gamedata.js');
+    loadAsset('assets/js/userdata.js');
+    loadAsset('assets/js/data-manager.js');
+    loadAsset('assets/js/host-panel.js');    
+    loadAsset('assets/js/profile-editor.js');
+    loadAsset('assets/js/availability-editor.js');
+</script>
 </body>
 </html>
