--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>play.u Live Entertainment</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/logo.png" type="image/png">
+    <script src="assets/js/version.js"></script>
+<script>
+    function loadAsset(path) {
+        const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
+        const extension = path.split('.').pop();
+        if (extension === 'css') {
+            document.write(`<link rel="stylesheet" href="${path}?v=${version}">`);
+        } else if (extension === 'js') {
+            document.write(`<script src="${path}?v=${version}" defer><\/script>`);
+        }
+    }
+</script>
 </head>
 <body>
 
@@ -166,15 +178,15 @@
     </main>
 
     <a href="#" class="back-to-top" id="back-to-top"><ion-icon name="arrow-up-outline"></ion-icon></a>
-    
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    
-    <script src="assets/js/gamedata.js" defer></script>
-    <script src="assets/js/userdata.js" defer></script>
-    <script src="assets/js/data-manager.js" defer></script>
-    <script src="assets/js/main.js" defer></script>
-    <script src="assets/js/translations.js" defer></script>
-    <link rel="stylesheet" href="assets/css/style.css">
+<script>
+    loadAsset('assets/css/style.css');
+    loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
+    loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
+    loadAsset('assets/js/gamedata.js');
+    loadAsset('assets/js/userdata.js');
+    loadAsset('assets/js/data-manager.js');
+    loadAsset('assets/js/translations.js');
+    loadAsset('assets/js/main.js');
+</script>
 </body>
 </html>
