--- a/sala.html
+++ b/sala.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sala de Jogo - Arautos Games</title>
-    <link rel="stylesheet" href="assets/css/style.e843132d.css">
+    <title>Sala de Jogo - PlayU</title>
+    <link rel="stylesheet" href="assets/css/style.ed1c03a0.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -82,7 +82,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
     <script src="assets/js/storage.js"></script>
-    <script src="assets/js/gamedata.e843132d.js"></script>
+    <script src="assets/js/gamedata.js"></script>
     <script src="assetsjs/firebase-config.js"></script> <script src="assets/js/sala-jogador.js"></script>
 </body>
 </html>
