atualizações e implementações na área do admin e telas de jogo

--- a/host-panel.html
+++ b/host-panel.html
@@ -26,6 +26,16 @@
             </div>
     </div>
 
+    <div class="dashboard-section" style="margin-bottom: 3rem;">
+            <h2>Sessões Agendadas</h2>
+            <p class="form-hint">Aqui estão os jogos marcados pelos jogadores. Você pode entrar a qualquer momento.</p>
+            <div id="host-bookings-list" class="bookings-list">
+                <div class="loader"></div>
+            </div>
+        </div>
+        
+        <hr class="form-divider">
+
     <div class="admin-panel profile-panel hidden">
         <div class="admin-panel-header">
             <h2>Meu Perfil</h2>
