--- a/host-panel.html
+++ b/host-panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel do Host</title>
-    <link rel="stylesheet" href="assets/css/style.4135f6c6.css">
+    <link rel="stylesheet" href="assets/css/style.3e5329bd.css">
     <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 <body class="admin-page-body">
@@ -25,6 +25,16 @@
         <div id="game-list-container">
             </div>
     </div>
+
+    <div class="dashboard-section" style="margin-bottom: 3rem;">
+            <h2>Sessões Agendadas</h2>
+            <p class="form-hint">Aqui estão os jogos marcados pelos jogadores. Você pode entrar a qualquer momento.</p>
+            <div id="host-bookings-list" class="bookings-list">
+                <div class="loader"></div>
+            </div>
+        </div>
+        
+        <hr class="form-divider">
 
     <div class="admin-panel profile-panel hidden">
         <div class="admin-panel-header">
@@ -124,15 +134,15 @@
 </dialog>
 </main>
     <script>
-    loadAsset('assets/css/style.4135f6c6.css');
+    loadAsset('assets/css/style.3e5329bd.css');
     loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
     loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
     loadAsset('assets/js/gamedata.js');
-    loadAsset('assets/js/userdata.4135f6c6.js');
-    loadAsset('assets/js/data-manager.4135f6c6.js');
-    loadAsset('assets/js/host-panel.4135f6c6.js');    
-    loadAsset('assets/js/profile-editor.4135f6c6.js');
-    loadAsset('assets/js/availability-editor.4135f6c6.js');
+    loadAsset('assets/js/userdata.3e5329bd.js');
+    loadAsset('assets/js/data-manager.3e5329bd.js');
+    loadAsset('assets/js/host-panel.3e5329bd.js');    
+    loadAsset('assets/js/profile-editor.3e5329bd.js');
+    loadAsset('assets/js/availability-editor.3e5329bd.js');
 </script>
 </body>
 </html>
