--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel Admin - PlayU</title>
-    <script src="assets/js/version.4135f6c6.js"></script>
+    <script src="assets/js/version.3e5329bd.js"></script>
     <script>
         function loadAsset(path) {
             const version = typeof SITE_VERSION !== 'undefined' ? SITE_VERSION : new Date().getTime();
@@ -109,6 +109,7 @@
                             <h4>Informações</h4>
                             <div class="form-row"><div class="form-group"><label>Nome *</label><input type="text" id="new-game-name" required></div><div class="form-group"><label>Status *</label><select id="new-game-status" required><option value="available">Disponível</option><option value="paused">Pausado</option><option value="draft">Rascunho</option></select></div></div>
                             <div class="form-row"><div class="form-group"><label>Duração *</label><input type="text" id="new-game-duration" required></div><div class="form-group" style="position:relative"><label>Tags *</label><div class="tags-input-container" id="tags-wrapper" onclick="document.getElementById('tag-input-field').focus()"><input type="text" id="tag-input-field" class="tag-input-field" placeholder="Digite..." autocomplete="off"></div><ul id="tags-suggestions" class="tags-suggestions-list"></ul></div></div>
+                            <div class="form-group"><label>Valor (R$) *</label><input type="text" id="new-game-price" required placeholder="Ex: 60,00"></div>
                             <div class="form-group"><label>Descrição Curta *</label><input type="text" id="new-game-short-desc" required></div>
                             <div class="form-group"><label>Descrição Completa *</label><textarea id="new-game-full-desc" rows="4" required></textarea></div>
                             <div class="form-group" style="background:rgba(0,0,0,0.2);padding:1rem;border-radius:8px;margin-top:1rem;"><label>Capa *</label><label for="admin-cover-upload" class="upload-label"><ion-icon name="cloud-upload-outline"></ion-icon><span>Enviar</span></label><input type="file" id="admin-cover-upload" accept="image/*" style="display:none;"><p id="upload-status" class="form-hint" style="display:none;">Enviando...</p><label class="form-label-or">Ou URL:</label><input type="url" id="new-game-cover" required><img id="admin-cover-preview" src="" style="max-height:150px;margin-top:10px;display:none;border-radius:5px;"></div>
@@ -166,10 +167,10 @@
 
     <script src="assets/js/firebase-config.js"></script>
     <script>
-        loadAsset('assets/css/style.4135f6c6.css');
+        loadAsset('assets/css/style.3e5329bd.css');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js');
         loadAsset('https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js');
-        loadAsset('assets/js/admin.4135f6c6.js');
+        loadAsset('assets/js/admin.3e5329bd.js');
     </script>
 </body>
 </html>
